# PolygonOS

./: CMakeCache.txt  CMakeLists.txt  Makefile  PolygonOS  README.md  cmake_install.cmake  polygonos.sh
includes/: git.h  libs.h  pm.h
installation-guides/: debounce-time-changing.md  deps.txt
src/: git.cpp  libs.cpp  pacman.cpp  pm.cpp  polygon.cpp  runtime.cpp
src/shell/: install-aur.sh
